[gd_scene load_steps=5 format=2]

[ext_resource path="res://AlgorithmScenes/Algorithms/BFSAlgorithm/adt_is_not_empty_popup.gd" type="Script" id=1]
[ext_resource path="res://Assets/GUI/popup_sci-fi-theme.tres" type="Theme" id=2]
[ext_resource path="res://AlgorithmScenes/Screen/ErrorInPopupTheme.tres" type="Theme" id=3]

[sub_resource type="Animation" id=1]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.75 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="ADTIsNotEmptyPopup" type="WindowDialog"]
margin_left = 492.0
margin_top = 200.0
margin_right = 1059.0
margin_bottom = 402.0
focus_neighbour_left = NodePath("VB/HB/YesButton")
focus_neighbour_right = NodePath("VB/HB/NoButton")
focus_next = NodePath("VB/HB/YesButton")
focus_previous = NodePath("VB/HB/NoButton")
focus_mode = 2
input_pass_on_modal_close_click = false
theme = ExtResource( 2 )
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="."]
margin_left = 9.0
margin_top = 6.0
margin_right = 558.0
margin_bottom = 195.0
custom_constants/separation = 20

[node name="Explanation" type="Label" parent="VB"]
margin_right = 549.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 265.108, 0 )
size_flags_horizontal = 3
text = "Is the Queue q empty?"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HB" type="HBoxContainer" parent="VB"]
margin_top = 61.0
margin_right = 549.0
margin_bottom = 106.0
custom_constants/separation = 20
alignment = 1

[node name="YesButton" type="Button" parent="VB/HB"]
unique_name_in_owner = true
modulate = Color( 0.121569, 0.913725, 0, 1 )
margin_left = 200.0
margin_right = 275.0
margin_bottom = 45.0
focus_neighbour_top = NodePath("../../..")
focus_neighbour_right = NodePath("../NoButton")
focus_next = NodePath("../NoButton")
focus_previous = NodePath("../../..")
mouse_default_cursor_shape = 2
text = "Yes"

[node name="NoButton" type="Button" parent="VB/HB"]
unique_name_in_owner = true
modulate = Color( 0.980392, 0.156863, 0.156863, 1 )
margin_left = 295.0
margin_right = 349.0
margin_bottom = 45.0
focus_neighbour_left = NodePath("../YesButton")
focus_neighbour_top = NodePath("../../..")
focus_next = NodePath("../YesButton")
focus_previous = NodePath("../YesButton")
mouse_default_cursor_shape = 2
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorNotification" type="Label" parent="VB"]
visible = false
margin_top = 126.0
margin_right = 549.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 265.108, 0 )
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "Error: Wrong answer"
align = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="VB/ErrorNotification"]
anims/message_modulation = SubResource( 1 )

[connection signal="popup_hide" from="." to="." method="_on_ADTIsNotEmptyPopup_popup_hide"]
[connection signal="pressed" from="VB/HB/YesButton" to="." method="_on_adt_is_empty_YesButton_pressed"]
[connection signal="pressed" from="VB/HB/NoButton" to="." method="_on_adt_is_empty_NoButton_pressed"]
